# ivLam2-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
benches/: solver_benchmark.rs
csrc/: lamb.c  lamb.h
docs/: algorithm.md  llm-context.md  sensitivities.md
fortran/: build.sh  ivLamRuntimeV2p50_739981p74401.f90  ivlam_c_wrapper.f90
src/: generated_coefficients.rs  geometry.rs  interpolation.rs  lib.rs  sensitivities.rs  solver.rs  stumpff.rs  velocity.rs
tasks/: todo.md
tests/: cross_validate_gooding.rs  cross_validate_three_way.rs  derivative_validation.rs  fuzz_validation.rs  hessian_validation.rs  interpolation_validation.rs  ivlam_derivatives.rs  round_trip.rs
tests/common/: gooding.rs  ivlam_ffi.rs  kepler.rs  mod.rs
tools/: parse_coefficients.rs
